--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,120 @@
-@import url("/style/reset.css");/*# sourceMappingURL=index.css.map */
+@import url("/style/reset.css");
+@font-face {
+  font-family: "NanumPenScript-Regular";
+  src: url("/style/NanumPenScript-Regular.ttf") format("truetype");
+}
+input[type=range] {
+  -webkit-appearance: none;
+  overflow: hidden;
+  background: transparent;
+  cursor: pointer;
+  background: rgb(255, 219, 219);
+  border-radius: 1rem;
+}
+
+input[type=range]:focus {
+  outline: none;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 0.9rem;
+  height: 0.9rem;
+  background: black;
+  box-shadow: -100rem 0 0 100rem rgb(255, 109, 133);
+}
+
+.mp3-container {
+  width: 100vw;
+  height: 100vh;
+  font-family: "NanumPenScript-Regular";
+}
+.mp3-container__device {
+  width: 25rem;
+  height: 42rem;
+  position: absolute;
+  top: 11rem;
+  left: 40%;
+  border-radius: 1rem;
+  box-shadow: black 0rem 0.5rem 1rem;
+  border: 0.1rem solid black;
+}
+.mp3-container__device__head {
+  width: 25rem;
+  height: 24rem;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.mp3-container__device__head__title {
+  color: black;
+  padding-top: 0.7rem;
+  padding-bottom: 0.5rem;
+  font-size: 2rem;
+}
+.mp3-container__device__head__artist {
+  font-size: 1.5rem;
+  color: black;
+}
+.mp3-container__device__head__disk {
+  margin-top: 1rem;
+  width: 17rem;
+  height: 17rem;
+  border-radius: 9rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-animation: rotate_image 10s linear infinite;
+          animation: rotate_image 10s linear infinite;
+  transform-origin: 50% 50%;
+  background-image: url(/img/folder.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  border: 0.1rem solid black;
+}
+@-webkit-keyframes rotate_image {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotate_image {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.mp3-container__device__head__disk__point {
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: white;
+  border-radius: 2rem;
+  border: 0.1rem solid black;
+}
+.mp3-container__device__body {
+  width: 25rem;
+  height: 18rem;
+  background-color: pink;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+.mp3-container__device__body__track-wrap {
+  position: relative;
+  width: 25rem;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+}
+.mp3-container__device__body__track-wrap__input-track {
+  width: 22rem;
+  height: 0.9rem;
+}
+.mp3-container__device__body__track-wrap__start-time {
+  position: absolute;
+  font-size: 1.5rem;
+}
+.mp3-container__device__body__track-wrap__end-time {
+  position: absolute;
+  font-size: 1.5rem;
+}/*# sourceMappingURL=index.css.map */
