--- a/style/index.scss
+++ b/style/index.scss
@@ -43,15 +43,25 @@ input[type="range"]::-webkit-slider-thumb {
   height: 100vh;
   font-family: "NanumPenScript-Regular";
 
+  &__background {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: blur(5rem);
+  }
+
   &__device {
     width: 25rem;
-    height: 42rem;
+    height: 39rem;
     position: absolute;
     top: 11rem;
     left: 40%;
     border-radius: $radius-1rem;
     box-shadow: black 0rem 0.5rem 1rem;
     border: 0.1rem solid black;
+    background-color: white;
 
     &__head {
       width: 25rem;
@@ -85,7 +95,6 @@ input[type="range"]::-webkit-slider-thumb {
         align-items: center;
         animation: rotate_image 10s linear infinite;
         transform-origin: 50% 50%;
-        background-image: url(/img/folder.jpg); // 임시
         background-size: contain;
         background-repeat: no-repeat;
         border: 0.1rem solid black;
@@ -108,7 +117,7 @@ input[type="range"]::-webkit-slider-thumb {
 
     &__body {
       width: 25rem;
-      height: 18rem;
+      height: 15rem;
       background-color: pink; //임시
       border-bottom-left-radius: 1rem;
       border-bottom-right-radius: 1rem;
@@ -119,8 +128,9 @@ input[type="range"]::-webkit-slider-thumb {
         height: 5rem;
         display: flex;
         justify-content: center;
+        background-color: aqua;
 
-        &__input-track {
+        &__timeline {
           width: 22rem;
           height: 0.9rem;
         }
@@ -128,12 +138,83 @@ input[type="range"]::-webkit-slider-thumb {
         &__start-time {
           position: absolute;
           font-size: 1.5rem;
+          top: 1.3rem;
+          left: 1.5rem;
         }
 
         &__end-time {
           position: absolute;
           font-size: 1.5rem;
+          top: 1.3rem;
+          right: 1.5rem;
         }
+      }
+
+      &__bottons-wrap {
+        position: relative;
+        width: 25rem;
+        height: 9rem;
+        background-color: red;
+        display: flex;
+        justify-content: center;
+
+        &__play-btn--hover {
+          width: 5rem;
+          height: 5rem;
+          border-radius: 3rem;
+          background-image: url("/img/play_img.png");
+          background-repeat: no-repeat;
+          background-size: contain;
+          cursor: pointer;
+        }
+
+        &__play-btn--hover:hover {
+          transition: all 0.5s;
+          background-image: url("/img/play_img_hover.png");
+          background-repeat: no-repeat;
+          background-size: contain;
+          cursor: pointer;
+        }
+
+        &__loop-btn--hover {
+          width: 2rem;
+          height: 2rem;
+          background-image: url("/img/loop_disable.png");
+          background-repeat: no-repeat;
+          background-size: contain;
+          position: absolute;
+          bottom: 0rem;
+          left: 1.5rem;
+          cursor: pointer;
+        }
+
+        &__loop-btn--hover:hover {
+          transition: all 0.5s;
+          background-image: url("/img/loop_active.png");
+          background-repeat: no-repeat;
+          background-size: contain;
+          cursor: pointer;
+        }
+
+        &__volume-btn--hover {
+          width: 2rem;
+          height: 2rem;
+          background-image: url("/img/mute_on.png");
+          background-repeat: no-repeat;
+          background-size: contain;
+          position: absolute;
+          bottom: 0rem;
+          right: 1.5rem;
+          cursor: pointer;
+        }
+
+        &__volume-btn--hover:hover {
+          transition: all 0.5s;
+          background-image: url("/img/mute_on_hover.png");
+          background-repeat: no-repeat;
+          background-size: contain;
+        }
+
       }
     }
   }
