--- a/style/index.css
+++ b/style/index.css
@@ -160,14 +160,44 @@ input[type=range]::-webkit-slider-thumb {
   cursor: pointer;
 }
 .mp3-container__device__body__bottons-wrap__prev-btn--hover {
-  width: 5rem;
-  height: 5rem;
-  background-color: blue;
+  width: 3rem;
+  height: 3rem;
+  background-image: url("/img/prev_btn.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-top: 1rem;
+  margin-right: 1rem;
+}
+.mp3-container__device__body__bottons-wrap__prev-btn--hover:hover {
+  transition: all 0.5s;
+  width: 3rem;
+  height: 3rem;
+  background-image: url("/img/prev_btn_hover.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-top: 1rem;
+  margin-right: 1rem;
+  cursor: pointer;
 }
 .mp3-container__device__body__bottons-wrap__next-btn--hover {
-  width: 5rem;
-  height: 5rem;
-  background-color: green;
+  width: 3rem;
+  height: 3rem;
+  background-image: url("/img/next_btn.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-top: 1rem;
+  margin-left: 1rem;
+}
+.mp3-container__device__body__bottons-wrap__next-btn--hover:hover {
+  transition: all 0.5s;
+  width: 3rem;
+  height: 3rem;
+  background-image: url("/img/next_btn_hover.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-top: 1rem;
+  margin-left: 1rem;
+  cursor: pointer;
 }
 .mp3-container__device__body__bottons-wrap__pause-btn--hover {
   width: 5rem;
