--- a/style/index.scss
+++ b/style/index.scss
@@ -184,23 +184,47 @@ input[type="range"]::-webkit-slider-thumb {
         }
 
         &__prev-btn--hover {
-          width: 5rem;
-          height: 5rem;
-          background-color: blue;
+          width: 3rem;
+          height: 3rem;
+          background-image: url("/img/prev_btn.png");
+          background-repeat: no-repeat;
+          background-size: contain;
+          margin-top: 1rem;
+          margin-right: 1rem;
         }
 
         &__prev-btn--hover:hover {
-          
+          transition: all 0.5s;
+          width: 3rem;
+          height: 3rem;
+          background-image: url("/img/prev_btn_hover.png");
+          background-repeat: no-repeat;
+          background-size: contain;
+          margin-top: 1rem;
+          margin-right: 1rem;
+          cursor: pointer;
         }
 
         &__next-btn--hover {
-          width: 5rem;
-          height: 5rem;
-          background-color: green;
+          width: 3rem;
+          height: 3rem;
+          background-image: url("/img/next_btn.png");
+          background-repeat: no-repeat;
+          background-size: contain;
+          margin-top: 1rem;
+          margin-left: 1rem;
         }
 
         &__next-btn--hover:hover {
-          
+          transition: all 0.5s;
+          width: 3rem;
+          height: 3rem;
+          background-image: url("/img/next_btn_hover.png");
+          background-repeat: no-repeat;
+          background-size: contain;
+          margin-top: 1rem;
+          margin-left: 1rem;
+          cursor: pointer;
         }
 
         &__pause-btn--hover {
