index.css and map

--- a/style/index.css
+++ b/style/index.css
@@ -218,7 +218,7 @@ input[type=range]::-webkit-slider-thumb {
 .mp3-container__device__body__bottons-wrap__loop-btn--hover {
   width: 2rem;
   height: 2rem;
-  background-image: url("/img/loop_disable.png");
+  background-image: url("/img/loop.png");
   background-repeat: no-repeat;
   background-size: contain;
   position: absolute;
@@ -246,7 +246,25 @@ input[type=range]::-webkit-slider-thumb {
 }
 .mp3-container__device__body__bottons-wrap__loop-btn-active--hover:hover {
   transition: all 0.5s;
-  background-image: url("/img/loop_disable.png");
+  background-image: url("/img/loop_one_active.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  cursor: pointer;
+}
+.mp3-container__device__body__bottons-wrap__loop-one-btn-active--hover {
+  width: 2rem;
+  height: 2rem;
+  background-image: url("/img/loop_one_active.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: absolute;
+  bottom: 0rem;
+  left: 1.5rem;
+  cursor: pointer;
+}
+.mp3-container__device__body__bottons-wrap__loop-one-btn-active--hover:hover {
+  transition: all 0.5s;
+  background-image: url("/img/loop.png");
   background-repeat: no-repeat;
   background-size: contain;
   cursor: pointer;
