--- a/style/index.scss
+++ b/style/index.scss
@@ -111,7 +111,7 @@ input[type="range"]::-webkit-slider-thumb {
         &__point {
           width: 1.5rem;
           height: 1.5rem;
-          background-color: white; //임시
+          background-color: white;
           border-radius: 2rem;
           border: 0.2rem solid black;
         }
@@ -125,7 +125,6 @@ input[type="range"]::-webkit-slider-thumb {
     &__body {
       width: 25rem;
       height: 15rem;
-      background-color: pink; //임시
       border-bottom-left-radius: 1rem;
       border-bottom-right-radius: 1rem;
 
@@ -135,7 +134,6 @@ input[type="range"]::-webkit-slider-thumb {
         height: 5rem;
         display: flex;
         justify-content: center;
-        background-color: aqua;
 
         &__timeline {
           width: 22rem;
@@ -161,7 +159,6 @@ input[type="range"]::-webkit-slider-thumb {
         position: relative;
         width: 25rem;
         height: 9rem;
-        background-color: red;
         display: flex;
         justify-content: center;
 
@@ -300,6 +297,46 @@ input[type="range"]::-webkit-slider-thumb {
         &__loop-one-btn-active--hover:hover {
           transition: all 0.5s;
           background-image: url("/img/loop.png");
+          background-repeat: no-repeat;
+          background-size: contain;
+          cursor: pointer;
+        }
+
+        &__shuffle-btn--hover {
+          width: 2rem;
+          height: 2rem;
+          background-image: url("/img/shuffle-btn.png");
+          background-repeat: no-repeat;
+          background-size: contain;
+          position: absolute;
+          bottom: -0.1rem;
+          left: 4.5rem;
+          cursor: pointer;
+        }
+
+        &__shuffle-btn--hover:hover {
+          transition: all 0.5s;
+          background-image: url("/img/shuffle-btn-active.png");
+          background-repeat: no-repeat;
+          background-size: contain;
+          cursor: pointer;
+        }
+
+        &__shuffle-btn-active--hover {
+          width: 2rem;
+          height: 2rem;
+          background-image: url("/img/shuffle-btn-active.png");
+          background-repeat: no-repeat;
+          background-size: contain;
+          position: absolute;
+          bottom: -0.1rem;
+          left: 4.5rem;
+          cursor: pointer;
+        }
+
+        &__shuffle-btn-active--hover:hover {
+          transition: all 0.5s;
+          background-image: url("/img/shuffle-btn.png");
           background-repeat: no-repeat;
           background-size: contain;
           cursor: pointer;
