remove loop and shuffle hover

--- a/style/index.scss
+++ b/style/index.scss
@@ -242,7 +242,8 @@ input[type="range"]::-webkit-slider-thumb {
           cursor: pointer;
         }
 
-        &__loop-btn--hover {
+        &__loop-btn {
+          transition: all 0.5s;
           width: 2rem;
           height: 2rem;
           background-image: url("/img/loop.png");
@@ -254,15 +255,8 @@ input[type="range"]::-webkit-slider-thumb {
           cursor: pointer;
         }
 
-        &__loop-btn--hover:hover {
+        &__loop-btn-active {
           transition: all 0.5s;
-          background-image: url("/img/loop_active.png");
-          background-repeat: no-repeat;
-          background-size: contain;
-          cursor: pointer;
-        }
-
-        &__loop-btn-active--hover {
           width: 2rem;
           height: 2rem;
           background-image: url("/img/loop_active.png");
@@ -274,15 +268,8 @@ input[type="range"]::-webkit-slider-thumb {
           cursor: pointer;
         }
 
-        &__loop-btn-active--hover:hover {
+        &__loop-one-btn-active {
           transition: all 0.5s;
-          background-image: url("/img/loop_one_active.png");
-          background-repeat: no-repeat;
-          background-size: contain;
-          cursor: pointer;
-        }
-
-        &__loop-one-btn-active--hover {
           width: 2rem;
           height: 2rem;
           background-image: url("/img/loop_one_active.png");
@@ -294,15 +281,8 @@ input[type="range"]::-webkit-slider-thumb {
           cursor: pointer;
         }
 
-        &__loop-one-btn-active--hover:hover {
+        &__shuffle-btn {
           transition: all 0.5s;
-          background-image: url("/img/loop.png");
-          background-repeat: no-repeat;
-          background-size: contain;
-          cursor: pointer;
-        }
-
-        &__shuffle-btn--hover {
           width: 2rem;
           height: 2rem;
           background-image: url("/img/shuffle-btn.png");
@@ -314,15 +294,8 @@ input[type="range"]::-webkit-slider-thumb {
           cursor: pointer;
         }
 
-        &__shuffle-btn--hover:hover {
+        &__shuffle-btn-active {
           transition: all 0.5s;
-          background-image: url("/img/shuffle-btn-active.png");
-          background-repeat: no-repeat;
-          background-size: contain;
-          cursor: pointer;
-        }
-
-        &__shuffle-btn-active--hover {
           width: 2rem;
           height: 2rem;
           background-image: url("/img/shuffle-btn-active.png");
@@ -331,14 +304,6 @@ input[type="range"]::-webkit-slider-thumb {
           position: absolute;
           bottom: -0.1rem;
           left: 4.5rem;
-          cursor: pointer;
-        }
-
-        &__shuffle-btn-active--hover:hover {
-          transition: all 0.5s;
-          background-image: url("/img/shuffle-btn.png");
-          background-repeat: no-repeat;
-          background-size: contain;
           cursor: pointer;
         }
 
