--- a/style/index.scss
+++ b/style/index.scss
@@ -20,6 +20,7 @@ $radius-1rem: 1rem;
 body {
   overflow-y: hidden;
   overflow-x: hidden;
+  font-family: "NanumPenScript-Regular";
 }
 
 input[type="range"] {
@@ -43,12 +44,17 @@ input[type="range"]::-webkit-slider-thumb {
   box-shadow: -100rem 0 0 100rem rgb(255, 109, 133);
 }
 
+.hidden-visibility {
+  transition: all 0.3s;
+  opacity: 0;
+  visibility: hidden;
+}
+
 // ▲ 공통요소
 
 .mp3-container {
   width: 100vw;
   height: 100vh;
-  font-family: "NanumPenScript-Regular";
 
   &__background {
     position: absolute;
@@ -370,6 +376,86 @@ input[type="range"]::-webkit-slider-thumb {
           }
         }
       }
+    }
+  }
+}
+
+.play-list-spread {
+  width: 25rem;
+  height: 100vh;
+  background-color: rgb(185, 78, 78);
+  position: absolute;
+  top: 0rem;
+  right: 0rem;
+  text-align: center;
+
+  &__text {
+    margin-top: 0.5rem;
+    font-size: 1.5rem;
+    padding-left: 3.1rem;
+  }
+
+  &__bar {
+    width: 3rem;
+    height: 100vh;
+    background-color: white;
+    border-left: 0.15rem solid black;
+    border-right: 0.15rem solid black;
+    box-shadow: black 0rem 0.5rem 1rem;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0rem;
+    left: 0rem;
+    cursor: pointer;
+    z-index: 999;
+
+    &__arrow {
+      width: 2rem;
+      height: 2rem;
+      background-image: url("/img/arrow_left.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+  }
+
+  &__inner {
+    width: 25rem;
+    height: 93.4vh;
+    background-color: beige;
+    position: absolute;
+    top: 6.6vh;
+  }
+}
+
+.play-list-folded {
+  width: 3rem;
+  height: 100vh;
+  position: absolute;
+  top: 0rem;
+  right: 0rem;
+
+  &__bar {
+    width: 3rem;
+    height: 100vh;
+    background-color: white;
+    border-left: 0.15rem solid black;
+    box-shadow: black 0rem 0.5rem 1rem;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0rem;
+    right: 0rem;
+    cursor: pointer;
+
+    &__arrow {
+      width: 2rem;
+      height: 2rem;
+      background-image: url("/img/arrow_right.png");
+      background-repeat: no-repeat;
+      background-size: contain;
     }
   }
 }
