--- a/style/index.css
+++ b/style/index.css
@@ -338,7 +338,7 @@ input[type=range]::-webkit-slider-thumb {
 
 .play-list-spread {
   width: 25rem;
-  height: 100vh;
+  height: 59.96rem;
   background-color: rgb(185, 78, 78);
   position: absolute;
   top: 0rem;
