--- a/style/index.scss
+++ b/style/index.scss
@@ -382,7 +382,8 @@ input[type="range"]::-webkit-slider-thumb {
 
 .play-list-spread {
   width: 25rem;
-  height: 100vh;
+  // height: 100vh; 디스플레이 테스트중
+  height: 59.96rem;
   background-color: rgb(185, 78, 78);
   position: absolute;
   top: 0rem;
