vh -> bottom 0rem

--- a/style/index.css
+++ b/style/index.css
@@ -338,11 +338,11 @@ input[type=range]::-webkit-slider-thumb {
 
 .play-list-spread {
   width: 25rem;
-  height: 59.96rem;
   background-color: rgb(185, 78, 78);
   position: absolute;
   top: 0rem;
   right: 0rem;
+  bottom: 0rem;
   text-align: center;
 }
 .play-list-spread__text {
@@ -352,7 +352,6 @@ input[type=range]::-webkit-slider-thumb {
 }
 .play-list-spread__bar {
   width: 3rem;
-  height: 100vh;
   background-color: white;
   border-left: 0.15rem solid black;
   border-right: 0.15rem solid black;
@@ -363,6 +362,7 @@ input[type=range]::-webkit-slider-thumb {
   position: absolute;
   top: 0rem;
   left: 0rem;
+  bottom: 0rem;
   cursor: pointer;
   z-index: 999;
 }
@@ -375,22 +375,21 @@ input[type=range]::-webkit-slider-thumb {
 }
 .play-list-spread__inner {
   width: 25rem;
-  height: 93.4vh;
   background-color: beige;
   position: absolute;
-  top: 6.6vh;
+  top: 3rem;
+  bottom: 0rem;
 }
 
 .play-list-folded {
   width: 3rem;
-  height: 100vh;
   position: absolute;
   top: 0rem;
   right: 0rem;
+  bottom: 0rem;
 }
 .play-list-folded__bar {
   width: 3rem;
-  height: 100vh;
   background-color: white;
   border-left: 0.15rem solid black;
   box-shadow: black 0rem 0.5rem 1rem;
@@ -400,6 +399,7 @@ input[type=range]::-webkit-slider-thumb {
   position: absolute;
   top: 0rem;
   right: 0rem;
+  bottom: 0rem;
   cursor: pointer;
 }
 .play-list-folded__bar__arrow {
